# detectui

./: .gitattributes  CMakeLists.txt  Dockerfile  Makefile  README.md  main.c
apps/: facedetectgl
ext/include/: dma-buf.h  nuklear.h  nuklear_wayland_gles2.h
libraries/assets/include/: calibrib.h  overlay.h
libraries/headless/include/: frame.h  stopwatch.h  streaming.h  streaming.hpp  streamingserver.h
libraries/lib/include/: init_window.h  opengl.h  opengl_font.h  shared.h  vpkui.h
libraries/models/include/: models.h
